[package]
name = "taxin"
version = "0.1.0"
authors = ["Njagi Mwaniki <njagi+code@njagi.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
clap = "^2.33.0"
num = "0.3.1"
indicatif = "0.15.0"
num-format = "0.4.0"
slipstream = "0.1.1"
rayon = "1.5.0"